Edited wiki page through web user interface.

--- a/wiki/CreateSession.wiki
+++ b/wiki/CreateSession.wiki
@@ -20,3 +20,12 @@ driver and the information to connect to the database.
 {{{
    ADO.Sessions.Factory.Create (Sess_Factory, "mysql://localhost:3306/ado_test?user=test");
 }}}
+
+== Opening a Session ==
+
+The session is created by using the `Get_Session` function of the factory.
+The session is associated with a database connection.
+
+{{{
+   S : ADO.Sessions.Session := Sess_Factory.Get_Session;
+}}}
