--- a/wiki/SimpleMappingExample.wiki
+++ b/wiki/SimpleMappingExample.wiki
@@ -84,11 +84,11 @@ The Ada generator and runtime support the following types:
 The Ada files are generated from the hibernate mapping file with the command:
 
 {{{
-dbmapper -o samples/model samples/user.hbm.xml
+dynamo generate db/samples
 }}}
 
 == Links ==
 
-[http://code.google.com/p/ada-ado/source/browse/trunk/samples/user.hbm.xml user.hbm.xml]
+[http://code.google.com/p/ada-ado/source/browse/trunk/db/samples/user.hbm.xml user.hbm.xml]
 
 [http://code.google.com/p/ada-ado/source/browse/trunk/samples/model/samples-user-model.ads samples-user-model.ads] (Generated package specification)
