--- a/wiki/UsingADO.wiki
+++ b/wiki/UsingADO.wiki
@@ -9,7 +9,7 @@ with the excellent Java framework [http://www.hibernate.org/ Hibernate].
 
 The ADO framework is composed of:
   * A code generator provided by [http://code.google.com/p/ada-gen Dynamo],
-  * A core runtime
+  * A core runtime,
   * A set of database drivers (MySQL, SQLite).
 
 == Defining the data model ==
@@ -18,13 +18,12 @@ The first step is to design the data model.  For this we will write
 a XML mapping file that describes the data table as well as how the different
 columns are mapped to an Ada type.  ADO uses (almost) the same mapping
 definition as [http://www.hibernate.org/ Hibernate].  Modeling tools such as
-[http://www.andromda.org AndroMDA] are able to generate these files from UML models.
+[http://www.andromda.org AndroMDA] are able to generate these XML mapping files from UML models.
 
-Let's define a mapping for a simple `user` table:
+Let's define a mapping for a simple `user` table and save it in `db/user.hbm.xml`:
 {{{
 <hibernate-mapping>
-  <class name="Samples.User.Model.User"
-           table="user">
+  <class name="Samples.User.Model.User" table="user">
     <comment>Record representing a user</comment>
     <id name="id" type="ADO.Identifier">
        <comment>the user identifier</comment>
@@ -40,9 +39,23 @@ Let's define a mapping for a simple `user` table:
         <comment>the user registration date</comment>
         <column name="DATE" not-null="false" unique="false" sql-type="VARCHAR(256)"/>
     </property>
-    </class>
+  </class>
 </hibernate-mapping>
 }}}
+
+
+== Generating the Ada model ==
+
+The [http://code.google.com/p/ada-gen Dynamo] code generator is then used
+to generate the package and Ada records that represent our data model.
+
+{{{
+dynamo generate
+}}}
+
+The generator will build the package specification and body for
+`Samples.User.Model`.  The files are created in `src/model` to make it
+clear that these files are model files that are generated.
 
 
 == Getting a Database Connection ==
